--- a/TwoPole.Chameleon3/TwoPole.Chameleon3.Business/TwoPole.Chameleon3.Business.csproj
+++ b/TwoPole.Chameleon3/TwoPole.Chameleon3.Business/TwoPole.Chameleon3.Business.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GalaSoft.MvvmLight">
-      <HintPath>..\..\..\Solution Items\Libs\GalaSoft.MvvmLight.dll</HintPath>
+      <HintPath>..\..\packages\MvvmLightLibs.5.2.0.0\lib\portable-net45+wp8+wpa81+netcore45+monoandroid1+xamarin.ios10\GalaSoft.MvvmLight.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
